@@ -4,7 +4,7 @@ CONFIG_RULES
 AC_SET_BUILDTOP
 AC_PROG_INSTALL
 WITH_NETLIB
-AC_HAVE_HEADERS(unistd.h)
+AC_HAVE_HEADERS(unistd.h stdlib.h)
 WITH_KRB5ROOT
 AC_FUNC_CHECK(strerror,AC_DEFINE(HAS_STRERROR))
 KRB_INCLUDE
